# tutorials

./: README.md
C++/: erode.cpp
C++/ITK-test/: CMakeLists.txt  ITK-test.cpp
C++/ITK-test-build/: CMakeCache.txt  Makefile  cmake_install.cmake
C++/VTK-test/: VTK-test.cpp
C++/VTK-test-buid/: CMakeCache.txt  Makefile  cmake_install.cmake  main  model.vtk
C++/VTK-test-nrrdfiles/: VTK-test.cpp
C++/VTK-test-nrrdfiles-build/: CMakeCache.txt  Makefile  baselineLabelMapWithBB.nrrd  baselineLabelMapWithBBExt101520.nrrd  baselineLabelMapWithBBMedianFilter.nrrd  cmake_install.cmake  main
C++/VTK-test-vtkfiles/: CMakeLists.txt  VTK-test.cpp
C++/VTK-test-vtkfiles-buid/: CMakeCache.txt  Makefile  cmake_install.cmake  model1.vtk
C++/erode/: CMakeLists.txt  erode.cpp
C++/erode-build/: CMakeCache.txt  Makefile  cmake_install.cmake
Qt/build-test-Desktop_Qt_5_3_clang_64bit-Debug/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h
Qt/build-test-Desktop_Qt_5_3_clang_64bit-Debug/test.app/Contents/MacOS/: test
Qt/test/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  test.pro
SlicerExecutionModel/erode/: CMakeLists.txt  Erode.xml  erode.cxx
Tests/TestExplications/: CMakeLists.txt  add.cxx  main.cxx
Tests/TestExplications/Testing/: CMakeLists.txt  TestAdd.cxx
Tests/erode/: CMakeLists.txt  erode.cxx  erode.xml
Tests/erode/Testing/: CMakeLists.txt
Tests/erode/Testing/data/: result_veau_r2.jpeg.md5  result_veau_r5.jpeg.md5  veau.bmp.md5
Tests/simple/: CMakeLists.txt  main.cxx  main.xml
Tests/simple/Test/: CMakeLists.txt  TestWrite.cxx
python/: GaussianFilter.py  ShrinkFilter.py  erode.py
